project/logs/20251024_113847.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatrueLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:resources/shaders/Particle.VS.hlsl,profile:vs_6_0

resources/shaders/Particle.VS.hlsl:36:12: error: no member named 'normal' in 'VertexShaderOutput'
    output.normal = normalize(mul(input.normal, world3x3));
    ~~~~~~ ^

Compile Succeeded,path:resources/shaders/Particle.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:resources/shaders/Particle.PS.hlsl,profile:ps_6_0

Compile Succeeded,path:resources/shaders/Particle.PS.hlsl,profile:ps_6_0

